--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="./css/styles.css">
 <body>
+    <header>
+        <div class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/The_Simpsons_Logo.svg" alt="">
+        </div>
+        <nav>
+            <a href="">Mostrar todo</a>
+            <a href="">Edad</a>
+        </nav>
+    </header>
     <ul id="lista">
         
     </ul>
