--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.cdnfonts.com/css/simpsonfont" rel="stylesheet">
 </head>
 <link rel="stylesheet" href="./css/styles.css">
 <body>
@@ -15,10 +16,18 @@
             <a href="">Mostrar todo</a>
             <a href="">Edad</a>
         </nav>
+        <div>
+            <div class="search">
+                <input type="search">
+            </div>
+        </div>
     </header>
     <ul id="lista">
         
     </ul>
+    <div id="preloader">
+        
+    </div>
     <script src="./introduccion.js"></script>
 </body>
 </html>
