--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.cdnfonts.com/css/simpsonfont" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/The_Simpsons_Logo.svg" alt="The Simpsons Logo">
+        </div>
+        <nav>
+            <div class="dropdown">
+              <button class="dropbtn">Ordenar por:</button>
+              <div class="dropdown-content">
+                <a href="" id="mostrarTodo">Mostrar todo</a>
+                <a href="" id="linkEdad">Menores de edad</a>
+                <a href="" id="promedio">Promedio de edad</a>
+                <a href="" id="fallecidos">Fallecidos</a>
+                <a href="" id="opea">Ordenar por edad ASC</a>
+                <a href="" id="rucos">Mas viejo y mas joven</a>
+                <a href="" id="Estudiantes">Estudiantes</a>
+                <a href="" id="nacimiento">Nacimiento menor a 1980-02-01</a>
+              </div>
+            </div>
+        </nav>
+        <div>
+            <div class="search">
+                <input type="search" id="searchInput">
+            </div>
+        </div>
+    </header>
     <ul id="lista">
         
     </ul>
+
+    <div id="preloader">
+        
+    </div>
     <script src="./introduccion.js"></script>
 </body>
 </html>
