--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simpsons Dropbox</title>
+    <title>Simpsons</title>
     <link href="https://fonts.cdnfonts.com/css/simpsonfont" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
