--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div class="search">
-    <input type="search" id="search-input" placeholder="Buscar personaje...">
+    <input type="search" id="search-input" style="font-family: 'SimpsonFont', sans-serif;" placeholder="Buscar personaje...">
 </div>
     </header>
 
